@@ -18,6 +18,8 @@ BookList=List of books
 NewService=New service
 ProductCode=Product code
 ServiceCode=Service code
+ProductAccountancyBuyCode=Accountancy code (buy)
+ProductAccountancySellCode=Accountancy code (sell)
 ProductOrService=Product or Service
 ProductsAndServices=Products and Services
 ProductsOrServices=Products or Services
