@@ -18,6 +18,8 @@ BookList=Liste livres
 NewService=Nouveau service
 ProductCode=Code produit
 ServiceCode=Code service
+ProductAccountancyBuyCode=Code compta achat
+ProductAccountancySellCode=Code compta vente
 ProductOrService=Produit ou Service
 ProductsOrServices=Produits ou Services
 ProductsAndServices=Produits et Services
